* Vnext
  * fixing license of a php OpenME code - now the same as CK
    (tiny part to connect PHP-based web requests to CK)
  * adding 'find' function to 'repo' module and changing
    default behavior. Now "ck find repo:<name>" returns
    path to repository rather than to meta. To return
    path to meta, use "ck find repo:<name> --meta".
    Closes ticket #45.

* V1.6.11
  * improved installation documentation

* V1.6.10
  * fixing automatic detection of an installation directory
    when using pip install --user
  * adding ChangeLog file for backwards compatibility with Debian
  * adding TODO.txt with a link to CK GitHub tickets

* V1.6.9
  * fixing/improving command line help

* V1.6.8
  * moving ck and ck.bat to 'scripts' in setup.py
  * moving condarecipe to external sources 
    (to prepare conda packages externally)
  * using $PYTHON on Linux

* V1.6.7
  * fixing 755 for bin/ck (for PIP installation)

* V1.6.6
  * Fixing PIP problem (when adding new modules to CK)
  * Removing debian description (will be separate to make non-native package)

* V1.6.5
  * fixing port selection from CMD for CK web service
    (ck start web --port={PORT})
  * fixing bug in Python 3 for 'ck status'
  * improving help
  * fixing bug with pip installation on Anaconda for Windows
  * fixing bug with pip installation on Linux
  * adding CK_PYTHON to change interpreter on Linux (for example python3)

* V1.6.4
  * Support ISO and human readable time during search
  * Removed ckcd and added commands "ck cd" and "ck cdc" 
  * fixing print of correct host and port when changed via 'ck setup kernel --wfe'
  * adding support for 'pyperclip' to copy to clipboard
  * warn if more than one entry found when using 'cd' and 'cdc' commands 
  * improving execution procedure with timeout 
  * fixing problem with latest version check in 'status' 
    (also checking it via GitHub)

* V1.6.3
  * fixing debian source package name to python-ck

* V1.6.2 
  * fixing length in Debian changelog
